RESOLVED FIXED144772
Occasional null deref in WebImmediateActionController
https://bugs.webkit.org/show_bug.cgi?id=144772
Summary Occasional null deref in WebImmediateActionController
Tim Horton
Reported 2015-05-07 15:51:29 PDT
Occasional null deref in WebImmediateActionController
Attachments
Patch (3.20 KB, patch)
2015-05-07 15:52 PDT, Tim Horton
bdakin: review+
Tim Horton
Comment 1 2015-05-07 15:52:02 PDT
Tim Horton
Comment 2 2015-05-07 16:09:35 PDT
Note You need to log in before you can comment on or make changes to this bug.