Occasional null deref in WebImmediateActionController https://bugs.webkit.org/show_bug.cgi?id=144772 <rdar://problem/20811128>

Reviewed by Beth Dakin.

* WebView/WebImmediateActionController.mm:
(-[WebImmediateActionController _defaultAnimationController]):
(-[WebImmediateActionController _animationControllerForDataDetectedText]):
(-[WebImmediateActionController _animationControllerForDataDetectedLink]):
Null-check TextIndicators before dereferencing.


Canonical link: https://commits.webkit.org/162789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183957 268f45cc-cd09-0410-ab3c-d52691b4dbfc